test/attr/ApplicationMain/attr_main_arguments.code
// RUN: %target-language-frontend -typecheck -parse-as-library -verify %s

@main // expected-error{{'MyBase' is annotated with '@main' and must provide a main static function}}
struct MyBase {
  static fn main(_ argc: Int, _ argv: [String]) {
  }
}

